Added entropy details
